Update testData path; include JVM args add-opens when run tests