@@ -84,3 +84,10 @@ testing {
         }
     }
 }
+
+tasks.withType<Test>().all {
+    jvmArgs("--add-opens=java.xml/com.sun.org.apache.xml.internal.serialize=ALL-UNNAMED",
+        "--add-opens=java.base/java.util=ALL-UNNAMED")
+}
+
+
